<resources>
    <string name="app_name">Currency converter</string>
    <string name="cost_of_service">0,00</string>
    <string name="amount_to_sell">0,00</string>
    <string name="calculate_button">SUBMIT</string>
    <string name="get_rates_button">GET RATES</string>
    <string name="name_currency_converter">Currency converter</string>
    <string name="my_balances">MY BALANCES</string>
    <string name="currency_exchange">CURRENCY EXCHANGE</string>
    <string name="name_image_of_sell">Sell</string>
    <string name="name_image_of_buy">Receive</string>
    <string name="USD">USD</string>
    <string name="EUR">EUR</string>
    <string name="dialog_text">выводы средств и комиссия</string>
    <string name="dialog_text_button">Done</string>
    <string name="settings">Settings</string>
    <string name="shere">Shere</string>
    <string name="aboutus">Aboutus</string>
    <string name="logout">Logout</string>
    <string name="exchangeButton">EXCHANGE</string>


</resources>